task02/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-app
  namespace: task02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool-app
  template:
    metadata:
      labels:
        app: multitool-app
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
          - containerPort: 8080
