task02/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: task02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
          - containerPort: 80
