task02/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: multitool-service
  namespace: task02
spec:
  selector:
    app: multitool-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
